Introducing AutoMapper for query projections

--- a/Termeh.Web/Scripts/app/views/jobs/Details.html
+++ b/Termeh.Web/Scripts/app/views/jobs/Details.html
@@ -8,7 +8,7 @@
             <div>
 
                 <div>
-                    <span style="width:50%;">Quantity 1:</span>{{job.Quantity}}
+                    <span style="width:50%;">Quantity :</span>{{job.Quantity}}
                 </div>
 
                 <div>
