--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -1,6 +1,10 @@
 ﻿<cst-Top-Menu></cst-Top-Menu>
-<h5 class="ui header">Jobs</h5>
-<div class="ui divider"></div>
+<div class="row">
+    <h5 class="ui header">Jobs</h5>
+    <div style="float: right;">
+        <a class="ui mini button" href="/Jobs/Add">New</a>
+    </div>    
+</div>
 <div>
     <table class="ui small table segment">
         <thead>
@@ -40,8 +44,5 @@
             </tr>
         </tbody>
     </table>
-    <div style="float: right;">
-        <a class="ui mini blue button" href="/Jobs/Add">Create new</a>
-    </div>
 </div>
 
