--- a/Termeh.Web/Scripts/app/views/jobs/Details.html
+++ b/Termeh.Web/Scripts/app/views/jobs/Details.html
@@ -1,30 +1,35 @@
-﻿<div>
+﻿<cst-Top-Menu></cst-Top-Menu>
+<div class="ui medium segment">
+    
     <h5 class="ui header">Job Details</h5>
     <div class="ui divider"></div>
-    <div style="font-size:small">
-        <div>
-            <strong>{{job.Name}}</strong> <br />
-            <p>{{job.Description}}</p>
-            <div>
-
-                <div>
-                    <span style="width:50%;">Quantity :</span>{{job.Quantity}}
-                </div>
-
-                <div>
-                    <span style="width:50%;">DueDate:</span>{{job.DueDate}}
-                </div>
-            </div>
+    <div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <span class="col-xs-6">Job Number : </span>
+            <span class="col-xs-6 col-sm-3 col-md-3">{{job.JobNumber}}</span>
         </div>
+        <div class="col-xs-6">
+            <span class="col-xs-12 col-sm-6 col-md-6">Name : </span>
+            <span class="col-xs-6 col-sm-6 col-md-6">{{job.Name}}</span>
+        </div>
+        <div class="row">
+            <span class="col-xs-12 col-sm-6 col-md-6">Description: </span>
+            <span class="col-xs-6 col-sm-6 col-md-6">{{job.Description}}</span>
+        </div>
+        <div class="row">
+            <span class="col-xs-12 col-sm-6 col-md-6">Quantity: </span>
+            <span class="col-xs-6 col-sm-6 col-md-6">{{job.Quantity}}</span>
+        </div>
+        <div class="row">
+            <span class="col-xs-12 col-sm-6 col-md-6">Due Date: </span>
+            <span class="col-xs-6 col-sm-6 col-md-6">{{job.DueDate | date:'dd/MM/yyyy'}}</span>
+        </div>        
     </div>
-
     <br />
     <div>
-        <a class="ui blue i button" href="/Activities/Add/?resourceId={{resource.Id}}">New Activity</a>
-        <a class="ui blue button" href="/Jobs/">Back</a>
+        <a class="ui blue mini button" href="/Jobs/">Back</a>
     </div>
-    <div>
     </div>
-    <br /><br />
-    <resource-activity-list activities="resource.Attachments" />
 </div>
+<!--    <resource-activity-list activities="resource.Attachments" />-->
