--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -1,9 +1,10 @@
 ﻿<cst-Top-Menu></cst-Top-Menu>
 <div class="row">
     <h5 class="ui header">Jobs List</h5>
-    <div style="float: right;">
-        <a class="ui mini button" href="/Jobs/Add">New</a>
+    <div>
+        <a class="ui blue mini button" href="/Jobs/Add">New Job</a>
     </div>    
+    <br/><br/>
 </div>
 <div>
     <table class="ui small table segment">
@@ -12,6 +13,7 @@
                 <th>Job Number</th>
                 <th>Name</th>
                 <th>Quantity</th>
+                <th>Rep Name</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -31,6 +33,9 @@
                 </td>
                 <td>
                     {{job.Quantity}}
+                </td>
+                <td>
+                    {{job.AssignedTo}}
                 </td>
                 <td style="width: 10%;">
                     <a href="/Jobs/Edit/{{job.Id}}"><i class="edit icon"></i></a>
