Add DatePicker to views (DueDate)

--- a/Termeh.Web/Scripts/app/views/jobs/Add.html
+++ b/Termeh.Web/Scripts/app/views/jobs/Add.html
@@ -20,6 +20,10 @@
         <label for="quantity">Quantity</label>
         <input type="text" id="quantity" placeholder="Quantity" required data-ng-model="job.Quantity" />
     </div>
+    <div class="field">
+        <label for="dueDate">DueDate</label>
+        <input id="dueDate" placeholder="DueDate" type="text" cst-datepicker data-ng-model="job.DueDate" />
+    </div>
     <div class="ui divider"></div>
     <div class="field">
         <label for="quantity">Assigned to </label>
