--- a/Termeh.Web/Scripts/app/views/jobs/Edit.html
+++ b/Termeh.Web/Scripts/app/views/jobs/Edit.html
@@ -26,7 +26,7 @@
     <div class="ui divider"></div>
     <div class="field">
         <label for="quantity">Assigned to </label>
-        <select ui-select2 style="width:100%;" id='userId' ng-required="true" data-placeholder="J" ng-model="job.userId">
+        <select ui-select2 style="width:100%;" id='userId' ng-required="true" data-placeholder="J" data-ng-model="job.UserId">
             <option value="">--Select--</option>
             <option ng-repeat="p in users" value="{{p.Id}}">{{p.FullName}}</option>
         </select>
