--- a/Termeh.Web/Scripts/app/partials/Loader.html
+++ b/Termeh.Web/Scripts/app/partials/Loader.html
@@ -1,3 +1,3 @@
-﻿<div class="ui active inverted dimmer">
-    <div class="ui text loader">Loading</div>
+﻿<div class="ui inverted dimmer" ng-class="{true: 'active', false: 'disabled'}[loading]">
+  <div class="ui text loader">Loading...</div>
 </div>
