--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -1,4 +1,5 @@
 ﻿<cst-Top-Menu></cst-Top-Menu>
+<cst-Loading-Overlay></cst-Loading-Overlay>
 <div class="row">
     <h5 class="ui header">Jobs List</h5>
     <div>
@@ -45,4 +46,3 @@
         </tbody>
     </table>
 </div>
-
