Add JobAttachment js service

--- a/Termeh.Web/Scripts/app/views/jobs/Edit.html
+++ b/Termeh.Web/Scripts/app/views/jobs/Edit.html
@@ -21,7 +21,7 @@
     </div>
     <div class="field">
         <label for="dueDate">DueDate</label>
-        <input id="dueDate" placeholder="DueDate" type="text" cst-datepicker data-ng-model="job.DueDate" />
+        <input id="dueDate" placeholder="DueDate" type="text" required cst-datepicker data-ng-model="job.DueDate" />
     </div>
     <div class="ui divider"></div>
     <div class="field">
