add jobAttachments to jobControler js

--- a/Termeh.Web/Scripts/app/views/jobs/Details.html
+++ b/Termeh.Web/Scripts/app/views/jobs/Details.html
@@ -28,6 +28,12 @@
     </div>
     <br />
     <div>
+        <select ui-select2 style="width:100%;" id='userId' ng-required="true" data-placeholder="J" data-ng-model="job.Attachments">
+            <option value="">--Select--</option>
+            <option ng-repeat="p in users" value="{{p.Id}}">{{p.FriendlyName}}</option>
+        </select>            
+    </div>
+    <div>
         <a class="ui blue mini button" href="/Jobs/">Back</a>
     </div>
     </div>
