--- a/Termeh.Web/Scripts/app/views/jobs/Details.html
+++ b/Termeh.Web/Scripts/app/views/jobs/Details.html
@@ -29,6 +29,7 @@
     <br />
     <div>
         <a class="ui blue mini button" href="/Jobs/">Back</a>
+        <a class="ui blue mini button" href="/JobAttachments/Add/">Add Attachment</a>
     </div>
     <br />
     <job-Attachment-List attachments="attachments" />
