apply some semantic-ui features on web views

--- a/Termeh.Web/Scripts/app/views/jobAttachments/Add.html
+++ b/Termeh.Web/Scripts/app/views/jobAttachments/Add.html
@@ -23,6 +23,6 @@
                 class="ui blue mini button">
             Submit
         </button>
-        <a class="ui black mini button" href="/JobAttachments/{{jobAttachment.Id}}">Cancel</a>
+        <a class="ui black mini button" href="/Jobs/job/{{jobAttachment.jobId}}">Cancel</a>
     </div>
 </form>
