--- a/Termeh.Web/Scripts/app/views/jobs/jobAttachments.html
+++ b/Termeh.Web/Scripts/app/views/jobs/jobAttachments.html
@@ -1,5 +1,5 @@
-﻿<div class="ui small feed segment" ng-controller="JobAttachmentCtrl">
-    <div class="ui small header">Attachments</div>
+﻿<div class="ui small feed segment" data-ng-controller="JobAttachmentCtrl">
+    <div class="ui small header">Attachments List</div>
     <div data-ng-repeat="attachment in jobAttachments" class="event">
         <div class="content" style="width:95%;">
             You had an attachment {{attachment.FriendlyName}} <b>{{attachment.FileName}}</b>
