--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -2,13 +2,10 @@
 <cst-Loading-Overlay></cst-Loading-Overlay>
 <div class="row">
     <h5 class="ui header">Jobs List</h5>
-    <div>
-        <a class="ui blue mini button" href="/Jobs/Add">New Job</a>
-    </div>    
     <br/><br/>
 </div>
 <div>
-    <table class="ui small table segment">
+    <table class="ui table segment">
         <thead>
             <tr>
                 <th>Job Number</th>
@@ -44,5 +41,14 @@
                 </td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="5">
+                    <div class="ui green labeled icon button small">
+                        <i class="add icon"></i> <a href="/Jobs/Add">New Job</a>                        
+                    </div>                
+                </th>
+            </tr>
+        </tfoot>
     </table>
 </div>
