Some UI changes ( apply semantic-ui variations)

--- a/Termeh.Web/Scripts/app/views/about/About.html
+++ b/Termeh.Web/Scripts/app/views/about/About.html
@@ -1,6 +1,6 @@
 ﻿<cst-Top-Menu></cst-Top-Menu>
-<div>
-    <h5 class="ui header">About</h5>
+<div class="ui message">
+    <div class="ui header">About</div>
     <div class="ui divider"></div>
     <p>
         This is an angular js with C# backend application
