--- a/Termeh.Web/Scripts/app/views/home/Home.html
+++ b/Termeh.Web/Scripts/app/views/home/Home.html
@@ -1,7 +1,9 @@
 ﻿<cst-Top-Menu></cst-Top-Menu>
-<h5 class="ui header">Home</h5>
-<div class="ui divider"></div>
-<p>
-    This is page is due to change. <br/><br/>
-    Welcome to the Termeh application.
-</p>
+<div class="ui message">
+    <div class="ui header">Home</div>
+    <div class="ui divider"></div>
+    <p>
+        This is page is due to change. <br/><br/>
+        Welcome to the Termeh application.
+    </p>
+</div>
