--- a/Termeh.Web/Scripts/app/views/jobs/Add.html
+++ b/Termeh.Web/Scripts/app/views/jobs/Add.html
@@ -24,7 +24,7 @@
     <div class="ui divider"></div>
     <div class="field">
         <label for="quantity">Assigned to </label>
-        <select ui-select2 style="width:100%;" id='userId' ng-required="true" data-placeholder="J" data-ng-model="job.userId">
+        <select ui-select2 style="width:100%;" id='userId' ng-required="true" data-placeholder="J" data-ng-model="job.AssignedToUserId">
             <option value="">--Select--</option>
             <option ng-repeat="p in users" value="{{p.Id}}">{{p.FullName}}</option>
         </select>
