--- a/Termeh.Web/template/typeahead/typeahead-popup.html
+++ b/Termeh.Web/template/typeahead/typeahead-popup.html
@@ -1,4 +1,4 @@
-<ul class="menu" ng-if="isOpen()" ng-style="{top: position.top+'px', left: position.left+'px'}" style="display: block;" role="listbox" aria-hidden="{{!isOpen()}}">
+<ul class="typeahead menu" ng-if="isOpen()" ng-style="{top: position.top+'px', left: position.left+'px'}" style="display: block;" role="listbox" aria-hidden="{{!isOpen()}}">
     <li ng-repeat="match in matches track by $index" ng-class="item {active: isActive($index) }" ng-mouseenter="selectActive($index)" ng-click="selectMatch($index)" role="option" id="{{match.id}}">
         <div typeahead-match index="$index" match="match" query="query" template-url="templateUrl"></div>
     </li>
