--- a/Termeh.Web/template/typeahead/typeahead-match.html
+++ b/Termeh.Web/template/typeahead/typeahead-match.html
@@ -1,1 +1,1 @@
-<a tabindex="-1" bind-html-unsafe="match.label | typeaheadHighlight:query"></a>
+<a class='item' tabindex="-1" bind-html-unsafe="match.label | typeaheadHighlight:query"></a>
