--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -12,11 +12,15 @@
                 </li>
             </ul>
         </script>
-        <div class="ui segment dropdown">            
-            Search Jobs : 
-            <input class="input large" type="text" data-ng-model="selected" placeholder="Please enter your job name ..." 
-                   typeahead="job.Name for job in jobs | filter:{Name:$viewValue} | limitTo:20"
-                >                                        
+        <div class="ui form dropdown">
+            <div class="field">                
+                <label>Search Jobs :</label>
+                <div class="dropdown">
+                    <input type="text" data-ng-model="selected" placeholder="Please enter your job name ..." 
+                           typeahead="job.Name for job in jobs | filter:{Name:$viewValue} | limitTo:20"
+                    >                                                            
+                </div>
+            </div>
         </div>
 
         <table class="ui six column table segment">
