--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -16,7 +16,7 @@
             <div class="field">                
                 <label>Search Jobs :</label>
                 <div class="dropdown">
-                    <input type="text" data-ng-model="selectedJob" placeholder="Please enter your job name ..." 
+                    <input type="text" ng-enter='whenEnterPressed()' data-ng-model="selectedJob" placeholder="Please enter your job name ..." 
                             typeahead-on-select='onSelect($item, $model, $label)'
                            typeahead="job.Name for job in jobs | filter:{Name:$viewValue} | limitTo:20"
                     >                                                            
