Refactor Angularjs controllers(Jobs, jobDetail, jobAttachments)

--- a/Termeh.Web/Scripts/app/views/jobs/jobAttachments.html
+++ b/Termeh.Web/Scripts/app/views/jobs/jobAttachments.html
@@ -1,4 +1,4 @@
-﻿<div class="ui small feed segment" data-ng-controller="JobAttachmentCtrl">
+﻿<div class="ui small feed segment" data-ng-controller="jobAttachmentCtrl">
     <div class="ui teal ribbon small label">Attachments </div>
     <div data-ng-repeat="attachment in jobAttachments" class="event">
         <div class="label">
