Update: put all js controllers/services in self-executing functions

--- a/Termeh.Web/Scripts/app/views/home/Home.html
+++ b/Termeh.Web/Scripts/app/views/home/Home.html
@@ -1,10 +1,9 @@
-﻿<!--<cst-Top-Menu></cst-Top-Menu>-->
+﻿<cst-Top-Menu></cst-Top-Menu>
 <div class="ui message">
     <div class="ui header">Home</div>
     <div class="ui divider"></div>
     <p>
         This is page is due to change. <br/><br/>
         Welcome to the Termeh application.
-        <div data-ng-repeat='j in jobs'><span>{{j}}</span></div>
     </p>
 </div>
