--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -5,20 +5,13 @@
 </div>
 <div class="ui segment">
     <div class="container">
-        <script type="text/ng-template" id="itemTpl.html">
-            <ul class="menu transition hidden">
-                <li ng-repeat="match in matches track by $index" ng-class="item {active: isActive($index) }" ng-mouseenter="selectActive($index)" ng-click="selectMatch($index)" role="option" id="{{match.id}}">
-                    <div query="query"></div>
-                </li>
-            </ul>
-        </script>
         <div class="ui form dropdown">
             <div class="field">                
                 <label>Search Jobs :</label>
                 <div class="dropdown">
                     <input type="text" ng-enter='whenEnterPressed()' data-ng-model="selectedJob" placeholder="Please enter your job name ..." 
-                            typeahead-on-select='onSelect($item, $model, $label)'
-                           typeahead="job.Name for job in jobs | filter:{Name:$viewValue} | limitTo:20"
+                           typeahead-on-select='onSelect($item, $model, $label)'
+                           typeahead="job.Name for job in jobs | limitTo:20"
                     >                                                            
                 </div>
             </div>
