--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -13,10 +13,11 @@
                     <input type="text" ng-enter='whenEnterPressed()' data-ng-model="selectedJob" placeholder="Please enter your job name ..." 
                            typeahead-on-select='onSelect($item, $model, $label)'
                            typeahead="job.Name for job in jobs | limitTo:20"
-                    >                                                            
+                        >                                                            
                 </div>
             </div>
         </div>
+        <a cst-Modal id='a123' href='#'>asd</a>
         <table class="ui six column table segment">
             <thead>
                 <tr>
