Some UI changes to modal dialogbox, apply some css classes

--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <a cst-Modal id='a123' href='#'>asd</a>
+        <confirmation-Modal modal-Title="wer" closable="true"/>
         <table class="ui six column table segment">
             <thead>
                 <tr>
