Enhancing delete confirmation directives

--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <confirmation-Modal modal-Title="wer" closable="true"/>
+<!--        <confirmation-Modal modal-Title="wer" closable="true"/>-->
         <table class="ui six column table segment">
             <thead>
                 <tr>
