fix search job template( angular ng-repeat returns error)

--- a/Termeh.Web/template/typeahead/typeahead-popup.html
+++ b/Termeh.Web/template/typeahead/typeahead-popup.html
@@ -1,7 +1,7 @@
 <div class="item">
-	<div class="menu" ng-if="isOpen()" ng-style="{top: position.top+'px', left: position.left+'px'}" style="display: block;" role="listbox" aria-hidden="{{!isOpen()}}">
-		<div ng-repeat="match in matches track by $index" ng-class="item {active: isActive($index) }" ng-mouseenter="selectActive($index)" ng-click="selectMatch($index)" role="option" id="{{match.id}}">
-			<div typeahead-match index="$index" match="match" query="query" template-url="templateUrl"></div>
+	<div class="menu" ng-style="{top: position.top+'px', left: position.left+'px'}" style="display: block;" role="listbox">
+		<div ng-repeat="match in matches track by $index" role="option" id="{{match.id}}">
+			<div typeahead-match index="$index" match="match" query="query" ></div>
 		</div>
 	</div>	
 </div>
