--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -12,12 +12,11 @@
                 <div class="dropdown">
                     <input type="text" ng-enter='whenEnterPressed()' data-ng-model="selectedJob" placeholder="Please enter your job name ..." 
                            typeahead-on-select='onSelect($item, $model, $label)'
-                           typeahead="job.Name for job in jobs | limitTo:20"
+                           typeahead="job.Name for job in jobs | filter:{Name:$viewValue} | limitTo:20"
                         >                                                            
                 </div>
             </div>
         </div>
-<!--        <confirmation-Modal modal-Title="wer" closable="true"/>-->
         <table class="ui six column table segment">
             <thead>
                 <tr>
@@ -47,7 +46,7 @@
                     <td>
                     
                         <a href="/Jobs/Edit/{{job.Id}}"><i class="square edit teal icon"></i></a>
-                        <a href="javascript:;" data-ng-click="deleteJob(job.Id)"><i class="square red trash icon"></i></a>
+                        <confirmation-Modal modal-Title="" data-ng-click="deleteJob(job.Id)" closable="true"/>
                     </td>
                 </tr>
             </tbody>
