--- a/Termeh.Web/Scripts/app/views/jobs/List.html
+++ b/Termeh.Web/Scripts/app/views/jobs/List.html
@@ -46,7 +46,7 @@
                     <td>
                     
                         <a href="/Jobs/Edit/{{job.Id}}"><i class="square edit teal icon"></i></a>
-                        <confirmation-Modal modal-Title="" data-ng-click="deleteJob(job.Id)" closable="true"/>
+                        <confirmation-Modal title="Delete Job?" data-ng-click="deleteJob(job.Id)" closable="true"/>
                     </td>
                 </tr>
             </tbody>
